RESOLVED FIXED58283
LayerChromium/CCLayerImpl ownership fix
https://bugs.webkit.org/show_bug.cgi?id=58283
Summary LayerChromium/CCLayerImpl ownership fix
Alexey Marinichev
Reported 2011-04-11 16:16:55 PDT
LayerChromium/CCLayerImpl ownership fix
Attachments
Patch (2.94 KB, patch)
2011-04-11 16:20 PDT, Alexey Marinichev
no flags
Patch (2.88 KB, patch)
2011-04-11 16:27 PDT, Alexey Marinichev
no flags
Alexey Marinichev
Comment 1 2011-04-11 16:20:57 PDT
James Robinson
Comment 2 2011-04-11 16:25:34 PDT
Comment on attachment 89116 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=89116&action=review OK > Source/WebCore/platform/graphics/chromium/cc/CCLayerImpl.cpp:154 > + // m_owner is reset by LayerChromium's destructor. comment isn't really helpful here, i would just delete
Alexey Marinichev
Comment 3 2011-04-11 16:27:29 PDT
WebKit Commit Bot
Comment 4 2011-04-11 19:22:24 PDT
Comment on attachment 89119 [details] Patch Clearing flags on attachment: 89119 Committed r83551: <http://trac.webkit.org/changeset/83551>
WebKit Commit Bot
Comment 5 2011-04-11 19:22:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.